Removing dataset from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ vignettes/*.pdf
 # Log files
 .log
 
+# Dataset
+countries.geojson
+
 # =========================
 # Operating System Files
 # =========================
